Fixed line breaks in descriptions

--- a/src/main/resources/static/design/style.css
+++ b/src/main/resources/static/design/style.css
@@ -1614,6 +1614,10 @@ div#device {
     font-family: var(--font-bold);
 }
 
+#settings-description > #settings-description-description {
+    white-space: pre-line;
+}
+
 #settings-description > :is(#settings-description-overridden, #settings-description-unaffected) {
     opacity: 0.5;
     font-size: 2vmin;
